<resources>
    <string name="app_name">Fragments</string>
    <!-- Login java file strings -->
    <string name="login_succ">Logged in successfully. Please wait </string>
    <string name="warning">FIELD CANNOT BE EMPTY</string>
    <string name="valid">Please provide  valid user name and  Password</string>
    <!-- Login in window -->
    <string name="Welcome">Welcome Back!</string>
    <string name="Please_login">Please Login to Set Started </string>
    <string name="Enter_contact">Contact Number</string>
    <string name="Enter_password">Password</string>
    <string name="Sign_in">Sign In</string>
    <string name="Remember">Remember Password</string>
    <string name="Dont_hv_acc">Don\'t have an account ?</string>
    <!--Registration Screen -->
    <string name="title_activity_registration">Registration</string>
    <string name="Personal">Personal info</string>
    <string name="Name">Name</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Age">Age</string>
    <string name="Registration">Registration</string>
    <string name="Address">Address</string>
    <string name="Country">Country</string>
    <string name="State">State</string>
    <string name="Adhar">Aadhar Number</string>
    <string name="IMEI1">IMEI1</string>
    <string name="IMEI2">IMEI2</string>
    <string name="Sign_up">Sign Up</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <!-- Arrays of country and states -->
    <string-array name="countries_array">
        <item>---Select---</item>
        <item>India</item>
        <item>Srilanka</item>
    </string-array>

    <string-array name="states_array">
        <item>---Select---</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>

    <!--   For Shopping Cart-->
    <string name="shopping_title">Fruits Shopping </string>
    <string name="cart">Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
