<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UI.Fragment_Registration">
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/Registration"
        android:background="@color/Green">

    </Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/reg_margin"
                    android:text="@string/Personal"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/header_text_size"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/reg_margin"
                    android:hint="@string/Name"
                    android:textSize="@dimen/in_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/reg_margin"
                    android:text="@string/Gender"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/header_text_size"
                    android:textStyle="bold" />

                <RadioGroup android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                            android:id="@+id/male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:text="@string/Male" />

                        <RadioButton
                            android:layout_toRightOf="@+id/male"
                            android:id="@+id/female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Female" />
            </RadioGroup>


                <EditText
                    android:id="@+id/Age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/reg_margin"
                    android:hint="@string/Age"
                    android:inputType="number"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/in_text_size" />

                <EditText
                    android:id="@+id/Contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/reg_margin"
                    android:hint="@string/Enter_contact"
                    android:inputType="number"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/in_text_size" />

                <EditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/reg_margin"
                    android:hint="@string/Enter_password"
                    android:inputType="textPassword"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/in_text_size" />

                <EditText
                    android:id="@+id/conPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/reg_margin"
                    android:hint="@string/ConfirmPassword"
                    android:inputType="textPassword"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/in_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/reg_margin"
                    android:text="@string/Address"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/header_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/reg_margin"
                    android:text="@string/Country"
                    android:textSize="@dimen/in_text_size" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_height"
                    android:background="@drawable/round_shape_button" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/reg_margin"
                    android:text="@string/State"
                    android:textSize="@dimen/in_text_size" />

                <Spinner

                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spinner_height"
                    android:background="@drawable/round_shape_button" />


                <EditText
                    android:id="@+id/Adhar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/reg_margin"
                    android:hint="@string/Adhar"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/in_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/reg_margin"
                    android:text="@string/IMEI1"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/in_text_size" />

                <EditText
                    android:id="@+id/IMEI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/reg_margin"
                    android:hint="36146548452487"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/in_text_size" />


                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/reg_margin"
                    android:background="@drawable/sign_up"
                    android:gravity="center"
                    android:text="@string/Sign_up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/in_text_size" />


            </LinearLayout>

        </ScrollView>

    </FrameLayout>
</LinearLayout>